// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component PossiblyMyRecords renders active filters 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            <p>
              No works were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching works found"
      >
        <div>
          <p>
            No works were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={true}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        sm={3}
      >
        <StandardRighthandCard
          title="Refine results"
        >
          <FacetsFilter
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {
                  "Year": Object {
                    "from": 2000,
                    "to": 2010,
                  },
                },
              }
            }
            disabled={false}
            excludeFacetsList={
              Array [
                "Scopus document type",
                "Genre",
                "Year published",
              ]
            }
            facetsData={Object {}}
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={
              Object {
                "Display type": "Work type",
                "Subtype": "Work subtype",
              }
            }
            showOpenAccessFilter={false}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders alert when the hide pub api fails 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(Alert)
    message="Error has occurred during request and request cannot be processed. Test error message Please contact eSpace administrators or try again later."
    title="Error"
    type="error"
  />
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            <p>
              No works were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching works found"
      >
        <div>
          <p>
            No works were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders list of publications and counts and facets 1`] = `
<StandardPage
  title="Claim possible works"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to hide selected possible work from this view?",
        "confirmationTitle": "Hide work",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      md={9}
      xs={12}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        >
          <WithStyles(Typography)>
            3 out of 5 potential match(es) displayed. Select any item to claim it as your work.
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "marginTop": 16,
            }
          }
          xs={true}
        >
          <WithStyles(Grid)
            item={true}
            xs={true}
          >
            <PublicationsList
              customActions={
                Array [
                  Object {
                    "handleAction": [Function],
                    "label": "Claim this work",
                    "primary": true,
                  },
                  Object {
                    "handleAction": [Function],
                    "label": "Not mine",
                  },
                ]
              }
              hideCountDiff={false}
              publicationsList={
                Array [
                  1,
                  2,
                  3,
                ]
              }
              publicationsListSubset={Array []}
              showAdminActions={false}
              showDefaultActions={false}
              showMetrics={false}
              showSourceCountIcon={false}
              showSources={false}
              showUnpublishedBufferFields={false}
              subsetCustomActions={
                Array [
                  Object {
                    "disabled": true,
                    "label": "In progress",
                    "primary": false,
                  },
                ]
              }
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={true}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        sm={3}
      >
        <StandardRighthandCard
          title="Refine results"
        >
          <FacetsFilter
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {},
              }
            }
            disabled={false}
            excludeFacetsList={
              Array [
                "Scopus document type",
                "Genre",
                "Year published",
              ]
            }
            facetsData={
              Object {
                "Display type": Object {
                  "buckets": Array [
                    Object {
                      "doc_count": 95,
                      "key": 179,
                    },
                    Object {
                      "doc_count": 34,
                      "key": 130,
                    },
                    Object {
                      "doc_count": 2,
                      "key": 177,
                    },
                    Object {
                      "doc_count": 2,
                      "key": 183,
                    },
                    Object {
                      "doc_count": 1,
                      "key": 174,
                    },
                  ],
                  "doc_count_error_upper_bound": 0,
                  "sum_other_doc_count": 3,
                },
                "Keywords": Object {
                  "buckets": Array [
                    Object {
                      "doc_count": 15,
                      "key": "Brca1",
                    },
                    Object {
                      "doc_count": 15,
                      "key": "Oncology",
                    },
                    Object {
                      "doc_count": 13,
                      "key": "Breast cancer",
                    },
                    Object {
                      "doc_count": 12,
                      "key": "Genetics & Heredity",
                    },
                    Object {
                      "doc_count": 10,
                      "key": "Biochemistry & Molecular Biology",
                    },
                  ],
                  "doc_count_error_upper_bound": 0,
                  "sum_other_doc_count": 641,
                },
              }
            }
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={
              Object {
                "Display type": "Work type",
                "Subtype": "Work subtype",
              }
            }
            showOpenAccessFilter={false}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders loading component while loading publication data 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(InlineLoader)
        message="Searching for possibly your works"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  />
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders loading screen while loading publication counts 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(InlineLoader)
        message="Searching for possibly your works"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={true}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  />
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders no results 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            <p>
              No works were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching works found"
      >
        <div>
          <p>
            No works were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders nothing while account is loading 1`] = `""`;

exports[`Component PossiblyMyRecords should generate <Alert> when appropriate 1`] = `
<WithStyles(Alert)
  message={null}
/>
`;

exports[`Component PossiblyMyRecords should generate <Alert> when appropriate 2`] = `
<WithStyles(Alert)
  message="Alert: test message"
/>
`;
